k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 1212-dashboard-ingress
  namespace: 1212-dashboard
spec:
  ingressClassName: nginx
  rules:
    - host: 1212-dashboard.app.nso.mn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: 1212-dashboard-svc
                port:
                  number: 80
